apollo-router/src/uplink/snapshots/apollo_router__uplink__license_enforcement__test__progressive_override.snap
---
source: apollo-router/src/uplink/license_enforcement.rs
assertion_line: 558
expression: report.to_string()
---
Schema features:
* progressive_override
  huzzah
