apollo-router/src/uplink/snapshots/apollo_router__uplink__license_enforcement__test__restricted_authorization_directives_via_schema.snap
---
source: apollo-router/src/uplink/license_enforcement.rs
expression: report.to_string()
---
Schema features:
* @authenticated
  https://specs.apollo.dev/authenticated/v0.1

* @requiresScopes
  https://specs.apollo.dev/requiresScopes/v0.1
