apollo-router/src/uplink/snapshots/apollo_router__uplink__license_enforcement__test__restricted_features_via_config.snap
---
source: apollo-router/src/uplink/license_enforcement.rs
expression: report.to_string()
---
Configuration yaml:
* Restricted
  .plugins.['experimental.restricted'].enabled

* Coprocessor plugin
  .coprocessor

* Query plan caching
  .supergraph.query_planning.cache.redis

* APQ caching
  .apq.router.cache.redis

* Subgraph entity caching
  .preview_entity_cache.enabled

* Response caching
  .response_cache.enabled

* Federated subscriptions
  .subscription.enabled

* Operation depth limiting
  .limits.router.max_depth

* Operation height limiting
  .limits.router.max_height

* Operation root fields limiting
  .limits.router.max_root_fields

* Operation aliases limiting
  .limits.router.max_aliases

* Advanced telemetry
  .telemetry..spans.router

* Advanced telemetry
  .telemetry..spans.supergraph

* Advanced telemetry
  .telemetry..spans.subgraph

* Advanced telemetry
  .telemetry..instruments

* Advanced telemetry
  .telemetry..graphql

* Apollo metrics extended references
  .telemetry.apollo.metrics_reference_mode

* APQ caching
  .apq.router.cache.redis

* Authentication plugin
  .authentication.router

* Demand control plugin
  .demand_control

* Subgraph entity caching
  .preview_entity_cache.enabled

* File uploads plugin
  .preview_file_uploads

* Federated subscriptions
  .subscription.enabled
