apollo-router/src/uplink/snapshots/apollo_router__uplink__license_enforcement__test__restricted_features_via_config_allowed_features_empty.snap
---
source: apollo-router/src/uplink/license_enforcement.rs
expression: report.to_string()
---
Configuration yaml:
* APQ caching
  .apq.router.cache.redis

* Authentication plugin
  .authentication.router

* Subgraph response caching
  .response_cache.enabled

* Federated subscriptions
  .subscription.enabled

* Coprocessor plugin
  .coprocessor

* Query plan caching
  .supergraph.query_planning.cache.redis

* Demand control plugin
  .demand_control

* Restricted
  .plugins.['experimental.restricted'].enabled

* Operation depth limiting
  .limits.router.max_depth

* Operation height limiting
  .limits.router.max_height

* Operation root fields limiting
  .limits.router.max_root_fields

* Operation aliases limiting
  .limits.router.max_aliases
