apollo-router/src/uplink/snapshots/apollo_router__uplink__license_enforcement__test__restricted_features_via_config_unlicensed.snap
---
source: apollo-router/src/uplink/license_enforcement.rs
expression: report.to_string()
---
Configuration yaml:
* APQ caching
  .apq.router.cache.redis

* Authentication plugin
  .authentication.router

* Subgraph entity caching
  .preview_entity_cache.enabled

* Federated subscriptions
  .subscription.enabled

* Coprocessor plugin
  .coprocessor

* Query plan caching
  .supergraph.query_planning.cache.redis

* Demand control plugin
  .demand_control

* Restricted
  .plugins.['experimental.restricted'].enabled

* Operation depth limiting
  .limits.max_depth

* Operation height limiting
  .limits.max_height

* Operation root fields limiting
  .limits.max_root_fields

* Operation aliases limiting
  .limits.max_aliases

* Advanced telemetry
  .telemetry..spans.router

* Advanced telemetry
  .telemetry..spans.supergraph

* Advanced telemetry
  .telemetry..spans.subgraph

* Advanced telemetry
  .telemetry..graphql
