apollo-router/src/uplink/snapshots/apollo_router__uplink__license_enforcement__test__restricted_features_via_config_with_limits.snap
---
source: apollo-router/src/uplink/license_enforcement.rs
expression: report_with_limits.to_string()
---
Configuration yaml:
* Restricted
  .plugins.['experimental.restricted'].enabled

* Authentication plugin
  .authentication.router

* Coprocessor plugin
  .coprocessor

* Query plan caching
  .supergraph.query_planning.cache.redis

* APQ caching
  .apq.router.cache.redis

* Subgraph entity caching
  .preview_entity_cache.enabled

* Federated subscriptions
  .subscription.enabled

* Operation depth limiting
  .limits.max_depth

* Operation height limiting
  .limits.max_height

* Operation root fields limiting
  .limits.max_root_fields

* Operation aliases limiting
  .limits.max_aliases

* Advanced telemetry
  .telemetry..spans.router

* Advanced telemetry
  .telemetry..spans.supergraph

* Advanced telemetry
  .telemetry..spans.subgraph

* Advanced telemetry
  .telemetry..instruments

* Advanced telemetry
  .telemetry..graphql

* File uploads plugin
  .preview_file_uploads

* Demand control plugin
  .demand_control

* Apollo metrics extended references
  .telemetry.apollo.metrics_reference_mode

* Apollo usage reporting override
  .telemetry.apollo.endpoint

* Apollo OTLP usage reporting override
  .telemetry.apollo.experimental_otlp_endpoint
