apollo-router/src/uplink/snapshots/apollo_router__uplink__license_enforcement__test__restricted_unix_socket_via_schema_when_allowed_features_empty.snap
---
source: apollo-router/src/uplink/license_enforcement.rs
expression: report.to_string()
---
Schema features:
* @join__Graph.url
  https://specs.apollo.dev/join/v0.3

Unix socket support for subgraph requests is restricted to Enterprise users
