apollo-router/src/uplink/snapshots/apollo_router__uplink__license_enforcement__test__schema_enforcement_directive_arg_version_in_range.snap
---
source: apollo-router/src/uplink/license_enforcement.rs
assertion_line: 741
expression: report.to_string()
---
Schema features:
* @join__field.overrideLabel
  https://specs.apollo.dev/join/v0.4

The `overrideLabel` argument on the join spec's @field directive is restricted to Enterprise users. This argument exists in your supergraph as a result of using the `@override` directive with the `label` argument in one or more of your subgraphs.
