apollo-router/src/uplink/snapshots/apollo_router__uplink__license_enforcement__test__schema_enforcement_spec_version_in_range.snap
---
source: apollo-router/src/uplink/license_enforcement.rs
expression: report.to_string()
---
Schema features:
* @authenticated
  https://specs.apollo.dev/authenticated/v0.1
